--- a/index.html
+++ b/index.html
@@ -15,17 +15,40 @@
 
 <body>
     <h1 class="heading">
-        <img class ="logo" src="assets/images/logo.png" alt="Logo"> Love Maths
+        <img class="logo" src="assets/images/logo.png" alt="Logo"> Love Maths
     </h1>
-    
+
 
     <div class="game-area">
+        <div class="controls-area">
+            <button class="btn btn--big Btn--green">
+                <i class="fas fa-plus"></i>
+            </button>
+            <button class="btn btn--big Btn--blue">
+                <i class="fas fa-minus"></i>
+            </button>
+            <button class="btn btn--big Btn--orange">
+                <i class="fas fa-times"></i>
+            </button>
+            <button class="btn btn--big Btn--red">
+                <i class="fas fa-divide"></i>
+            </button>
+        </div>
+        <div class="question-area">
+            <span id="operand1">0</span>
+            <span id="operator">x</span>
+            <span id="operand2">0</span>
+            <span>=</span>
+            <p class="answer-message">Enter Answer:</p>
+            <input id="answer-box" type="number">
+        </div>
+        <button class="btn btn--gray">Submit Answer</button>
 
     </div>
 
-    <div class="score-area">\
+    <div class="score-area">
         <p class="scores">Correct Answer<span id="score">0</p>
-        <p class="scores">Inxorrect Answer<span id="incorrect">0</p>
+        <p class="scores">Incorrect Answer<span id="incorrect">0</p>
     </div>
 
     <script src="assets/js/script.js"></script>
