--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
     <div class="game-area">
         <div class="controls-area">
-            <button data-type="addition" class="btn btn--big Btn--green">
+            <button data-type="addition" class="btn btn--big btn--green">
                 <i class="fas fa-plus"></i>
             </button>
-            <button data-type="subtract" class="btn btn--big Btn--blue">
+            <button data-type="subtract" class="btn btn--big btn--blue">
                 <i class="fas fa-minus"></i>
             </button>
-            <button data-type="multiply" class="btn btn--big Btn--orange">
+            <button data-type="multiply" class="btn btn--big btn--orange">
                 <i class="fas fa-times"></i>
             </button>
-            <button data-type="divison" class="btn btn--big Btn--red">
+            <button data-type="divison" class="btn btn--big btn--red">
                 <i class="fas fa-divide"></i>
             </button>
         </div>
